--- a/doc/style/kawa-l.css
+++ b/doc/style/kawa-l.css
@@ -10,6 +10,7 @@ body {
 
 div.navcol {
   position: absolute;
+  overflow: auto;
   width: 25%;
   top: 0em; right: 0em; bottom: 0em; left: 0em;
   overflow: auto;
