--- a/doc/style/kawa.css
+++ b/doc/style/kawa.css
@@ -214,9 +214,6 @@ div.logo {
 }
 div.logo a div { padding: 0.4ex; overflow: auto }
 
-div.navbar {
-    overflow: auto
-}
 div.navcol *.logo span { 
     font-size: xx-large;
 }
